<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#232123">


    <TextView
        android:id="@+id/homePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/appTitle"
        android:textColor="#4F65F7"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playBTN"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        android:background="@drawable/blue_button"
        android:onClick="jugarButtonClick"
        android:text="@string/playButton"
        android:textColor="#F8E7E7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageTitle" />

    <Button
        android:id="@+id/ExitBTN"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:background="@drawable/red_button"
        android:onClick="exitButtonClick"
        android:text="@string/exitButton"
        android:textColor="#F8E7E7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageTitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>